--- a/Image Processing.ipynb
+++ b/Image Processing.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the high-level \"tasks\" that process the pixels"
+    "#### Load the high-level \"tasks\" that process the pixels"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load a version of psfex that implements our Psf object"
+    "#### Load a version of psfex that implements our Psf object"
    ]
   },
   {
@@ -75,35 +75,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next import will fail until you've explicitly built and setup the Kron extension\n",
-    "\n",
-    "    git clone git@github.com:lsst/meas_extensions_photometryKron\n",
-    "    setup -r . -j\n",
-    "    scons -Q opt=3 -j 4\n",
-    "    \n",
-    "and then restarted your jupyter notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    import lsst.meas.extensions.photometryKron\n",
-    "    doKron = True\n",
-    "except ImportError as e:\n",
-    "    doKron = False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Setup the displays (by default an interface to ds9)"
+    "#### Setup the displays (by default an interface to ds9)\n",
+    "(the _callbacks stuff is working around a bug)"
    ]
   },
   {
@@ -114,8 +87,8 @@
    },
    "outputs": [],
    "source": [
-    "disp  = afwDisplay.Display(1)\n",
-    "disp2 = afwDisplay.Display(2)"
+    "disp  = afwDisplay.Display(1);  disp.callbacks  = disp._callbacks\n",
+    "disp2 = afwDisplay.Display(2);  disp2.callbacks = disp2._callbacks"
    ]
   },
   {
@@ -151,30 +124,8 @@
     "config = SingleFrameMeasurementTask.ConfigClass()\n",
     "config.doApplyApCorr = 'yes'\n",
     "config.slots.apFlux = 'base_CircularApertureFlux_12_0'\n",
-    "if doKron:\n",
-    "    config.plugins.names.add(\"ext_photometryKron_KronFlux\")\n",
     "sourceMeasurementTask = SingleFrameMeasurementTask(schema=schema, config=config,\n",
     "                                                   algMetadata=algMetadata)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is a bug that I need to add this field to the metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "if doKron:\n",
-    "    algMetadata.set(\"ext_photometryKron_KronFlux_nRadiusForFlux\",\n",
-    "                    config.plugins[\"ext_photometryKron_KronFlux\"].nRadiusForFlux)"
    ]
   },
   {
@@ -431,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Look at how well the aperture (maybe including Kron) photometry agrees with the PSF measurements"
+    "#### Look at how well the aperture photometry agrees with the PSF measurements"
    ]
   },
   {
@@ -444,24 +395,17 @@
    "source": [
     "with afwImageUtils.CalibNoThrow():\n",
     "    apMag = exposure.getCalib().getMagnitude(sources.getApFlux())\n",
-    "    #apMag = exposure.getCalib().getMagnitude(sources[\"base_CircularApertureFlux_12_0_flux\"])\n",
-    "    if doKron:\n",
-    "        kronMag = exposure.getCalib().getMagnitude(sources[\"ext_photometryKron_KronFlux_flux\"])\n",
+    "    #apMag = exposure.getCalib().getMagnitude(sources[\"base_CircularApertureFlux_3_0_flux\"])\n",
     "    psfMag = exposure.getCalib().getMagnitude(sources.getPsfFlux())\n",
     "\n",
-    "for mag, name in [\n",
-    "                    (apMag, \"aperture\"),\n",
-    "                    #(kronMag, \"Kron\")\n",
-    "                 ]:\n",
-    "    plt.plot(apMag[good], (psfMag - mag)[good], 'o', label=name)\n",
+    "plt.plot(apMag[good], (psfMag - apMag)[good], 'o')\n",
     "\n",
-    "plt.legend(loc='best')\n",
     "plt.axhline(0.0, ls=':', color='black')\n",
     "plt.xlim(14, 24.5)\n",
     "plt.ylim(-0.2, 0.8)\n",
     "\n",
     "plt.xlabel(\"apMag\")\n",
-    "plt.ylabel(\"psfMag - mag\")\n",
+    "plt.ylabel(\"psfMag - apMag\")\n",
     "\n",
     "plt.show()"
    ]
@@ -481,7 +425,7 @@
    },
    "outputs": [],
    "source": [
-    "if not False:\n",
+    "if True:\n",
     "    disp2.mtv(exposure, title='post calib')\n",
     "else:\n",
     "    disp2.erase()"
@@ -578,30 +522,6 @@
     "    for s in sources[good]:\n",
     "        disp2.dot('+', *s.getCentroid(),\n",
     "                    ctype=afwDisplay.CYAN if s.get(\"flags_negative\") else afwDisplay.GREEN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "if doKron:\n",
-    "    disp2.erase()\n",
-    "\n",
-    "    Kron_nRadiusForFlux = algMetadata.get(\"ext_photometryKron_KronFlux_nRadiusForFlux\")\n",
-    "    with disp2.Buffering():\n",
-    "        for s in sources[good]:\n",
-    "            shape = s.getShape().clone()\n",
-    "            rDet = shape.getDeterminantRadius()\n",
-    "\n",
-    "            shape.scale(s[\"ext_photometryKron_KronFlux_radius\"]/rDet)\n",
-    "            disp2.dot(shape, *s.getCentroid(), ctype=afwDisplay.RED)\n",
-    "            \n",
-    "            shape.scale(Kron_nRadiusForFlux)\n",
-    "            disp2.dot(shape, *s.getCentroid(), ctype=afwDisplay.CYAN)"
    ]
   },
   {
