Remove fiddling with PSF

--- a/Image Processing.ipynb
+++ b/Image Processing.ipynb
@@ -57,24 +57,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load a version of psfex that implements our Psf object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import lsst.meas.extensions.psfex.psfexPsfDeterminer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Setup the displays (by default an interface to ds9)\n",
     "(the _callbacks stuff is working around a bug)"
    ]
@@ -111,7 +93,6 @@
     "\n",
     "config = CharacterizeImageTask.ConfigClass()\n",
     "config.psfIterations = 1\n",
-    "#config.measurePsf.psfDeterminer.name = \"pca\"\n",
     "charImageTask =         CharacterizeImageTask(config=config)\n",
     "\n",
     "config = SourceDetectionTask.ConfigClass()\n",
@@ -191,9 +172,7 @@
    },
    "outputs": [],
    "source": [
-    "result = charImageTask.characterize(exposure, exposureIdInfo)\n",
-    "\n",
-    "psfCellSet = result.psfCellSet     # we'll look at this data structure later"
+    "result = charImageTask.characterize(exposure, exposureIdInfo)"
    ]
   },
   {
@@ -435,79 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Show the PSF candidates on the image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "if psfCellSet:\n",
-    "    with disp2.Buffering():\n",
-    "        for cell in psfCellSet.getCellList():\n",
-    "            afwDisplayUtils.drawBBox(cell.getBBox(), display=disp2, \n",
-    "                                     borderWidth=0.5, ctype=afwDisplay.CYAN)\n",
-    "\n",
-    "            for cand in cell:\n",
-    "                disp2.dot(\"*\", cand.getXCenter(), cand.getYCenter(),\n",
-    "                          ctype=afwDisplay.GREEN if cand.GOOD else afwDisplay.RED)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Look at the residuals from the PSF modelling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "residuals = exposure.getMaskedImage().getImage().clone()\n",
-    "psf = exposure.getPsf()\n",
-    "\n",
-    "with disp.Buffering():\n",
-    "    for s in sources[good]:\n",
-    "        psfImage = psf.computeImage(s.getCentroid()).convertF()\n",
-    "        psfImage *= s.getPsfFlux()/np.sum(psfImage.getArray())\n",
-    "            \n",
-    "        try:\n",
-    "            residuals[psfImage.getBBox()] -= psfImage\n",
-    "        except:\n",
-    "            pass\n",
-    "            \n",
-    "disp.mtv(residuals)\n",
-    "\n",
-    "with disp.Buffering():\n",
-    "    for s in sources[good]:\n",
-    "        disp.dot(\"o\", *s.getCentroid(), size=20) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Now show something about the measurements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "disp2.erase()"
+    "#### Show something about the measurements"
    ]
   },
   {
