Better illustration of configuring measurement

--- a/Image Processing.ipynb
+++ b/Image Processing.ipynb
@@ -95,18 +95,19 @@
     "config.psfIterations = 1\n",
     "charImageTask =         CharacterizeImageTask(config=config)\n",
     "\n",
-    "config = SourceDetectionTask.ConfigClass()\n",
-    "#config.thresholdValue = 30\n",
-    "#config.doTempLocalBackground = True\n",
-    "sourceDetectionTask =   SourceDetectionTask(schema=schema, config=config)\n",
+    "sourceDetectionTask =   SourceDetectionTask(schema=schema)\n",
     "\n",
     "sourceDeblendTask =     SourceDeblendTask(schema=schema)\n",
     "\n",
-    "config = SingleFrameMeasurementTask.ConfigClass()\n",
-    "config.doApplyApCorr = 'yes'\n",
-    "config.slots.apFlux = 'base_CircularApertureFlux_12_0'\n",
-    "sourceMeasurementTask = SingleFrameMeasurementTask(schema=schema, config=config,\n",
-    "                                                   algMetadata=algMetadata)"
+    "if True:\n",
+    "    sourceMeasurementTask = SingleFrameMeasurementTask(schema=schema,\n",
+    "                                                       algMetadata=algMetadata)\n",
+    "else:\n",
+    "    config = SingleFrameMeasurementTask.ConfigClass()\n",
+    "    config.doApplyApCorr = 'yes'\n",
+    "    #config.slots.apFlux = 'base_CircularApertureFlux_12_0'\n",
+    "    sourceMeasurementTask = SingleFrameMeasurementTask(schema=schema, config=config,\n",
+    "                                                       algMetadata=algMetadata)"
    ]
   },
   {
@@ -373,8 +374,11 @@
    "outputs": [],
    "source": [
     "with afwImageUtils.CalibNoThrow():\n",
-    "    apMag = exposure.getCalib().getMagnitude(sources.getApFlux())\n",
-    "    #apMag = exposure.getCalib().getMagnitude(sources[\"base_CircularApertureFlux_3_0_flux\"])\n",
+    "    if True:\n",
+    "        apMag = exposure.getCalib().getMagnitude(sources[\"base_CircularApertureFlux_12_0_flux\"])\n",
+    "    else:\n",
+    "        apMag = exposure.getCalib().getMagnitude(sources.getApFlux())\n",
+    "\n",
     "    psfMag = exposure.getCalib().getMagnitude(sources.getPsfFlux())\n",
     "\n",
     "plt.plot(apMag[good], (psfMag - apMag)[good], 'o')\n",
