Grrr, now need a None

--- a/Image Processing.ipynb
+++ b/Image Processing.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
     "\n",
     "config = CharacterizeImageTask.ConfigClass()\n",
     "config.psfIterations = 1\n",
-    "charImageTask =         CharacterizeImageTask(config=config)\n",
+    "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "sourceDetectionTask =   SourceDetectionTask(schema=schema)\n",
     "\n",
