Oops, missed some imports

--- a/Kron.ipynb
+++ b/Kron.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "config = CharacterizeImageTask.ConfigClass()\n",
     "config.psfIterations = 1\n",
-    "charImageTask =         CharacterizeImageTask(config=config)\n",
+    "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "sourceDetectionTask =   SourceDetectionTask(schema=schema)\n",
     "\n",
