--- a/PSF.ipynb
+++ b/PSF.ipynb
@@ -115,7 +115,7 @@
     "config = CharacterizeImageTask.ConfigClass()\n",
     "config.psfIterations = 1\n",
     "#config.measurePsf.psfDeterminer.name = \"pca\"\n",
-    "charImageTask =         CharacterizeImageTask(config=config)\n",
+    "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "config = SourceDetectionTask.ConfigClass()\n",
     "sourceDetectionTask =   SourceDetectionTask(schema=schema, config=config)\n",
