Oops, missed some imports

--- a/Kron.ipynb
+++ b/Kron.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "from lsst.daf.butlerUtils import ExposureIdInfo\n",
     "\n",
+    "import lsst.afw.display            as afwDisplay\n",
     "import lsst.afw.image              as afwImage\n",
     "import lsst.afw.geom               as afwGeom\n",
     "import lsst.afw.table              as afwTable\n",
