--- a/Tune Detection.ipynb
+++ b/Tune Detection.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "from lsst.daf.butlerUtils import ExposureIdInfo\n",
     "\n",
+    "import lsst.afw.display            as afwDisplay\n",
     "import lsst.afw.image              as afwImage\n",
     "import lsst.afw.geom               as afwGeom\n",
     "import lsst.afw.table              as afwTable\n",
@@ -72,7 +73,7 @@
     "\n",
     "config = CharacterizeImageTask.ConfigClass()\n",
     "config.psfIterations = 1\n",
-    "charImageTask =         CharacterizeImageTask(config=config)\n",
+    "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "config = SourceDetectionTask.ConfigClass()\n",
     "#config.thresholdValue = 30\n",
