Make the choices of PSF modelling explicit

--- a/PSF.ipynb
+++ b/PSF.ipynb
@@ -115,7 +115,11 @@
     "\n",
     "config = CharacterizeImageTask.ConfigClass()\n",
     "config.psfIterations = 1\n",
-    "#config.measurePsf.psfDeterminer.name = \"pca\"\n",
+    "if True:\n",
+    "    config.measurePsf.psfDeterminer.name = \"pca\"   # the default\n",
+    "else:\n",
+    "    config.measurePsf.psfDeterminer.name = \"psfex\"\n",
+    "    \n",
     "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "config = SourceDetectionTask.ConfigClass()\n",
@@ -153,7 +157,6 @@
     "tab = afwTable.SourceTable.make(schema)\n",
     "\n",
     "result = charImageTask.characterize(exposure, exposureIdInfo)\n",
-    "\n",
     "psfCellSet = result.psfCellSet     # we'll look at this data structure later\n",
     "\n",
     "result = sourceDetectionTask.run(tab, exposure)\n",
