Added comments on how to fiddle with parameters

--- a/Kron.ipynb
+++ b/Kron.ipynb
@@ -288,9 +288,7 @@
    },
    "outputs": [],
    "source": [
-    "fitsTable = \"outputTable.fits\"\n",
-    "sources.writeFits(fitsTable)\n",
-    "\n",
+    "sources.writeFits(\"outputTable.fits\")\n",
     "exposure.writeFits(\"example1-out.fits\")"
    ]
   },
