--- a/PSF.ipynb
+++ b/PSF.ipynb
@@ -166,9 +166,7 @@
     "\n",
     "sourceMeasurementTask.run(exposure, sources)\n",
     "\n",
-    "fitsTable = \"outputTable.fits\"\n",
-    "sources.writeFits(fitsTable)\n",
-    "\n",
+    "sources.writeFits(\"outputTable.fits\")\n",
     "exposure.writeFits(\"example1-out.fits\")"
    ]
   },
