--- a/Tune Detection.ipynb
+++ b/Tune Detection.ipynb
@@ -76,8 +76,11 @@
     "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "config = SourceDetectionTask.ConfigClass()\n",
-    "#config.thresholdValue = 30\n",
-    "#config.doTempLocalBackground = True\n",
+    "if False:\n",
+    "    config.thresholdValue = 30       # detection threshold in units of sigma\n",
+    "    config.thresholdType = \"stdev\"   # options: config._fields[\"thresholdType\"].allowed\n",
+    "if False:                    \n",
+    "    config.doTempLocalBackground = True  # Use local-background during detection step\n",
     "sourceDetectionTask =   SourceDetectionTask(schema=schema, config=config)\n",
     "\n",
     "sourceDeblendTask =     SourceDeblendTask(schema=schema)\n",
@@ -119,9 +122,7 @@
     "\n",
     "sourceMeasurementTask.run(exposure, sources)\n",
     "\n",
-    "fitsTable = \"outputTable.fits\"\n",
-    "sources.writeFits(fitsTable)\n",
-    "\n",
+    "sources.writeFits(\"outputTable.fits\")\n",
     "exposure.writeFits(\"example1-out.fits\")"
    ]
   },
@@ -156,7 +157,7 @@
    "outputs": [],
    "source": [
     "if True:\n",
-    "    disp.mtv(exposure, title='post calib')\n",
+    "    disp.mtv(exposure)\n",
     "else:\n",
     "    disp.erase()\n",
     "    \n",
