Use a better way of getting a config parameter's doc string

--- a/Tune Detection.ipynb
+++ b/Tune Detection.ipynb
@@ -76,9 +76,12 @@
     "charImageTask =         CharacterizeImageTask(None, config=config)\n",
     "\n",
     "config = SourceDetectionTask.ConfigClass()\n",
-    "if False:\n",
-    "    config.thresholdValue = 30       # detection threshold in units of sigma\n",
-    "    config.thresholdType = \"stdev\"   # options: config._fields[\"thresholdType\"].allowed\n",
+    "if True:\n",
+    "    config.thresholdValue = 30       # detection threshold in units of thresholdType\n",
+    "    if True:\n",
+    "        print \"SourceDetectionTask.thresholdType: %s\" % (\n",
+    "            SourceDetectionTask.ConfigClass.thresholdType.__doc__)\n",
+    "    config.thresholdType = \"stdev\"   # units for thresholdValue\n",
     "if False:                    \n",
     "    config.doTempLocalBackground = True  # Use local-background during detection step\n",
     "sourceDetectionTask =   SourceDetectionTask(schema=schema, config=config)\n",
